fix: global search dark mode style

--- a/frappe/public/scss/desk/global_search.scss
+++ b/frappe/public/scss/desk/global_search.scss
@@ -23,7 +23,8 @@
 		.search-input {
 			padding-left: 25px;
 			padding-bottom: var(--padding-md);
-			background: var(--fg-color);
+			border-radius: 0;
+			background: var(--modal-bg);
 			border-bottom: 1px solid var(--border-color);
 
 			&:focus {
